fix redirection button mobile

--- a/src/scss/3_components/footer/_footer-redirection.scss
+++ b/src/scss/3_components/footer/_footer-redirection.scss
@@ -14,7 +14,19 @@
 
 // Mobile
 @media all and (max-width: 700px) and (min-width: 340px) {
-       
+     
+   .redirection-footer{
+      margin: 150px auto;
+      h1{
+         font-size: map-get($font-sizes , 'xxl' );
+      }
+      a{
+         h1{
+            font-size: map-get($font-sizes , 'xxl' );
+         }
+      }
+   }
+
  }
 
 // Tablet and Desktop and X Desktop
