--- a/src/scss/3_components/startPage/service/_service.scss
+++ b/src/scss/3_components/startPage/service/_service.scss
@@ -35,6 +35,7 @@
         
 .service-notic{
   margin: 60px 25px 20px 25px;
+  padding: 0;
 }
 
     .services{
